Removed action attribute and added id to the form

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,7 +146,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <form action="https://njehmutanga.com:5000/submit_form" method="post">
+            <form id="contactForm" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
