🚧 work in progress

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,7 +158,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Njeh Mutanga</p>
+        <p>&copy; 2024 Njeh Mutanga! - All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
